--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 3000",
+    "dev": "next dev --turbopack -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -58,13 +58,13 @@
     "geist": "^1.3.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.536.0",
-    "next": "15.4.6",
+    "next": "^15.4.8",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "openai": "^4.72.1",
-    "react": "19.1.0",
+    "react": "^19.0.1",
     "react-day-picker": "^9.8.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.0.1",
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^3.0.4",
     "recharts": "^2.15.4",
